content/blog/2025-01-01-thin_delegate_aux/tests/ui/enum_delegate_v030/fail_not_supported_associated_const.stderr
error: only trait methods with untyped receiver are allowed
 --> tests/ui/enum_delegate_v030/fail_not_supported_associated_const.rs:5:5
  |
5 |     type Output;
  |     ^^^^

error[E0405]: cannot find trait `ShapeI` in this scope
  --> tests/ui/enum_delegate_v030/fail_not_supported_associated_const.rs:22:6
   |
22 | impl ShapeI for Rect {
   |      ^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
1  + use thin_delegate_aux::enum_dispatch::ShapeI;
   |

error[E0405]: cannot find trait `ShapeI` in this scope
  --> tests/ui/enum_delegate_v030/fail_not_supported_associated_const.rs:35:6
   |
35 | impl ShapeI for Circle {
   |      ^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
1  + use thin_delegate_aux::enum_dispatch::ShapeI;
   |
